# mcp-rag-keyword-emphasis

./: .env.example  Dockerfile  LICENSE  README.md  config.py  docker-compose.yml  mcp_server.py  pyproject.toml  requirements.txt
scripts/: run_docker_mcp.sh  run_python_mcp.sh  setup_python_mcp.sh
tests/: test_mcp_server.py
